--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -18,15 +18,11 @@
     },
     "license": "MIT",
     "author": "Start Bootstrap",
-    "contributors": [
-        "David Miller (http://davidmiller.io/)"
-    ],
     "repository": {
-        "type": "git",
-        "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
+        "type": "git"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "5.7.0",
+        "@fontawesome/fontawesome-free": "5.7.0",
         "bootstrap": "4.2.1",
         "jquery": "3.3.1",
         "jquery.easing": "^1.4.1"
